plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'ru.kopranych'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2020.0.3")
	set('commonsLang', '3.12.0')
	set('commonsCsv', '1.9.0')
	set('mapstructVersion', '1.4.2.Final')
	set('feignReactor', '3.1.1')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
//	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
//	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
//	implementation "com.playtika.reactivefeign:feign-reactor-webclient:${feignReactor}"
//	implementation 'org.springframework.cloud:spring-cloud-starter:3.0.4'
	implementation "com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:${feignReactor}"
	implementation 'io.github.openfeign:feign-slf4j:11.7'

//	implementation("com.playtika.reactivefeign:feign-reactor-core:${feignReactor}")
//	implementation("com.playtika.reactivefeign:feign-reactor-webclient:${feignReactor}")
//	implementation("com.playtika.reactivefeign:feign-reactor-spring-configuration:${feignReactor}")
//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.5.2'

	//apache
	implementation "org.apache.commons:commons-lang3:${commonsLang}" as String
	implementation "org.apache.commons:commons-csv:${commonsCsv}" as Object

	//mapstruct
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	implementation "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
}
